# AIWeatherAdvisor

./: .gitignore  README.md  default_settings.json  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml
src/weather_checker/: HelperFuncs.py  ai_assistant.py  main.py
